--- a/kc_house.ipynb
+++ b/kc_house.ipynb
@@ -3994,6 +3994,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation Coefficient: -0.9999999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Sample data\n",
+    "x = np.array([1, 2, 3, 4, 5])\n",
+    "y = np.array([5, 4, 3, 2, 1])\n",
+    "\n",
+    "# Calculating the correlation coefficient\n",
+    "correlation_coefficient = np.corrcoef(x, y)[0, 1]\n",
+    "\n",
+    "# Printing the result\n",
+    "print(\"Correlation Coefficient:\", correlation_coefficient)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
