--- a/API.ipynb
+++ b/API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset:\n",
+    "This dataset describes the moose  hunting activity and harvests from year 2006 to 2022.This data breaks down bull moose, cow moose, calf moose and total harvest numbers by wildlife management unit (WMU) and calendar year. Harvest and active hunter numbers are estimates based on replies received from a sample of hunters and are therefore subject to statistical error."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +33,7 @@
     }
    ],
    "source": [
+    "\n",
     "resource_id = '61d62c0e-784a-4061-8bbe-8ee8a42afde7'\n",
     "limit = 500\n",
     "offset = 0\n",
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +54,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -4107,7 +4116,7 @@
        "  'total_was_estimated': False}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4119,7 +4128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4128,7 +4137,7 @@
        "'https://data.ontario.ca/api/3/action/help_show?name=datastore_search'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4139,7 +4148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -8179,7 +8188,7 @@
        " 'total_was_estimated': False}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8190,7 +8199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -12198,7 +12207,7 @@
        "  'Total Harvest': 152}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12209,7 +12218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -12400,7 +12409,7 @@
        "[500 rows x 8 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12411,34 +12420,283 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>WMU</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Active Hunters</th>\n",
+       "      <th>Bull Harvest</th>\n",
+       "      <th>Cow Harvest</th>\n",
+       "      <th>Calf Harvest</th>\n",
+       "      <th>Total Harvest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>309</td>\n",
+       "      <td>35</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>402</td>\n",
+       "      <td>35</td>\n",
+       "      <td>11</td>\n",
+       "      <td>36</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>349</td>\n",
+       "      <td>29</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>311</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>380</td>\n",
+       "      <td>31</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>496</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>45</td>\n",
+       "      <td>23</td>\n",
+       "      <td>86</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>497</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4065</td>\n",
+       "      <td>41</td>\n",
+       "      <td>22</td>\n",
+       "      <td>82</td>\n",
+       "      <td>145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>498</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>4382</td>\n",
+       "      <td>57</td>\n",
+       "      <td>21</td>\n",
+       "      <td>138</td>\n",
+       "      <td>216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>499</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>4397</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>79</td>\n",
+       "      <td>167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>500</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>4297</td>\n",
+       "      <td>39</td>\n",
+       "      <td>36</td>\n",
+       "      <td>77</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     _id WMU  Year  Active Hunters  Bull Harvest  Cow Harvest  Calf Harvest  \\\n",
+       "0      1   2  2006             309            35           16             9   \n",
+       "1      2   2  2007             402            35           11            36   \n",
+       "2      3   2  2008             349            29           12            11   \n",
+       "3      4   2  2009             311            25           10            11   \n",
+       "4      5   2  2010             380            31           10             5   \n",
+       "..   ...  ..   ...             ...           ...          ...           ...   \n",
+       "495  496  41  2008            4032            45           23            86   \n",
+       "496  497  41  2009            4065            41           22            82   \n",
+       "497  498  41  2010            4382            57           21           138   \n",
+       "498  499  41  2011            4397            44           44            79   \n",
+       "499  500  41  2012            4297            39           36            77   \n",
+       "\n",
+       "     Total Harvest  \n",
+       "0               60  \n",
+       "1               82  \n",
+       "2               52  \n",
+       "3               46  \n",
+       "4               46  \n",
+       "..             ...  \n",
+       "495            154  \n",
+       "496            145  \n",
+       "497            216  \n",
+       "498            167  \n",
+       "499            152  \n",
+       "\n",
+       "[500 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Moose_hunting.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>WMU</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Active Hunters</th>\n",
+       "      <th>Bull Harvest</th>\n",
+       "      <th>Cow Harvest</th>\n",
+       "      <th>Calf Harvest</th>\n",
+       "      <th>Total Harvest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [_id, WMU, Year, Active Hunters, Bull Harvest, Cow Harvest, Calf Harvest, Total Harvest]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dup = Moose_hunting[Moose_hunting.duplicated()]\n",
+    "dup\n",
+    "#No duplicates are found."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Moose_hunting['reported_date'] = pd.to_datetime(covid_cases['Reported Date'])\n",
-    "Marriage['new_cases'] = covid_cases['Total Cases'].diff(1)\n",
-    "covid_cases[['reported_date', 'Total Cases', 'new_cases']].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Calculate Total Harvest per Year\n",
-    "total_harvest = Moose_hunting.groupby(['Year'])['Total Harvest'].sum().reset_index()\n"
+    "total_harvest = Moose_hunting.groupby(['Year'])['Total Harvest'].sum().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12448,7 +12706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12458,7 +12716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -12661,7 +12919,7 @@
        "[500 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12672,7 +12930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12688,7 +12946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12705,21 +12963,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'engine' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/grappeefruitt/schulich_data_science/API.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://github/grappeefruitt/schulich_data_science/API.ipynb#X26sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#create schema\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://github/grappeefruitt/schulich_data_science/API.ipynb#X26sdnNjb2RlLXZmcw%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mwith\u001b[39;00m engine\u001b[39m.\u001b[39mconnect() \u001b[39mas\u001b[39;00m connection:\n\u001b[1;32m      <a href='vscode-notebook-cell://github/grappeefruitt/schulich_data_science/API.ipynb#X26sdnNjb2RlLXZmcw%3D%3D?line=2'>3</a>\u001b[0m     connection\u001b[39m.\u001b[39mexecute(\u001b[39m'\u001b[39m\u001b[39mCREATE SCHEMA IF NOT EXISTS alex_is_evil\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'engine' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: psycopg2-binary in /opt/anaconda3/lib/python3.9/site-packages (2.9.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
+   "source": [
+    "pip install psycopg2-binary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy as sa\n",
+    "\n",
+    "engine = sa.create_engine(db_connection_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#create schema\n",
     "with engine.connect() as connection:\n",
@@ -12732,31 +13007,29 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'psycopg2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/grappeefruitt/schulich_data_science/API.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://github/grappeefruitt/schulich_data_science/API.ipynb#X25sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m engine \u001b[39m=\u001b[39m sa\u001b[39m.\u001b[39;49mcreate_engine(db_connection_url)\n",
-      "File \u001b[0;32m<string>:2\u001b[0m, in \u001b[0;36mcreate_engine\u001b[0;34m(url, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/sqlalchemy/util/deprecations.py:309\u001b[0m, in \u001b[0;36mdeprecated_params.<locals>.decorate.<locals>.warned\u001b[0;34m(fn, *args, **kwargs)\u001b[0m\n\u001b[1;32m    302\u001b[0m     \u001b[39mif\u001b[39;00m m \u001b[39min\u001b[39;00m kwargs:\n\u001b[1;32m    303\u001b[0m         _warn_with_version(\n\u001b[1;32m    304\u001b[0m             messages[m],\n\u001b[1;32m    305\u001b[0m             versions[m],\n\u001b[1;32m    306\u001b[0m             version_warnings[m],\n\u001b[1;32m    307\u001b[0m             stacklevel\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[1;32m    308\u001b[0m         )\n\u001b[0;32m--> 309\u001b[0m \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/sqlalchemy/engine/create.py:560\u001b[0m, in \u001b[0;36mcreate_engine\u001b[0;34m(url, **kwargs)\u001b[0m\n\u001b[1;32m    558\u001b[0m         \u001b[39mif\u001b[39;00m k \u001b[39min\u001b[39;00m kwargs:\n\u001b[1;32m    559\u001b[0m             dbapi_args[k] \u001b[39m=\u001b[39m pop_kwarg(k)\n\u001b[0;32m--> 560\u001b[0m     dbapi \u001b[39m=\u001b[39m dialect_cls\u001b[39m.\u001b[39;49mdbapi(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mdbapi_args)\n\u001b[1;32m    562\u001b[0m dialect_args[\u001b[39m\"\u001b[39m\u001b[39mdbapi\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m dbapi\n\u001b[1;32m    564\u001b[0m dialect_args\u001b[39m.\u001b[39msetdefault(\u001b[39m\"\u001b[39m\u001b[39mcompiler_linting\u001b[39m\u001b[39m\"\u001b[39m, compiler\u001b[39m.\u001b[39mNO_LINTING)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/sqlalchemy/dialects/postgresql/psycopg2.py:782\u001b[0m, in \u001b[0;36mPGDialect_psycopg2.dbapi\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m    780\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    781\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdbapi\u001b[39m(\u001b[39mcls\u001b[39m):\n\u001b[0;32m--> 782\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mpsycopg2\u001b[39;00m\n\u001b[1;32m    784\u001b[0m     \u001b[39mreturn\u001b[39;00m psycopg2\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
-     ]
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "engine = sa.create_engine(db_connection_url)"
+    "Moose_hunting.to_sql(\n",
+    "    name = 'Moose_hunting',\n",
+    "    schema = 'alex_is_evil',\n",
+    "    con = engine,\n",
+    "    if_exists = 'replace',\n",
+    "    index=False,\n",
+    "    method='multi',\n",
+    "    dtype= {\n",
+    "        'Average Harvest' : sa.types.DECIMAL(10,3)\n",
+    "    }   \n",
+    ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
